Replace var name

--- a/web/public/partials/user_edit.html
+++ b/web/public/partials/user_edit.html
@@ -20,7 +20,7 @@
     </div>
     <div class="input_group_modal">
         <div>Plots</div>
-        <input type="text" id="plots" value="{$user.number}">
+        <input type="text" id="plots" value="{$user.plot_id}">
     </div>
     <div class="user_modal_wrap">
         <div id="user_modal_note" class="fade"></div>
