--- a/web/public/partials/users_table.html
+++ b/web/public/partials/users_table.html
@@ -10,7 +10,7 @@
     </tr>
     {section name=i loop=$users}
     <tr>
-        <td>{$users[i].number}</td>
+        <td>{$users[i].plot_id}</td>
         <td>{$users[i].first_name}</td>
         <td>{$users[i].last_name}</td>
         <td>{$users[i].phone_str}</td>
